fixed command line unit tests