@@ -62,6 +62,9 @@
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.10.1</version>
+					<configuration>
+						<enablePreview>true</enablePreview>
+					</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-resources-plugin</artifactId>
@@ -69,8 +72,9 @@
 				</plugin>
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.22.2</version>
+					<version>3.1.2</version>
 					<configuration>
+						<argLine>--enable-preview</argLine>
 						<environmentVariables>
 							<FIRESTORE_HOST>127.0.0.1:8080</FIRESTORE_HOST>
 							<FIRESTORE_EMULATOR_HOST>127.0.0.1:8080</FIRESTORE_EMULATOR_HOST>
@@ -309,6 +313,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.release>17</maven.compiler.release>
 		<maven.compiler.source>17</maven.compiler.source>
+		<jdk.version>17</jdk.version>
+		<release.version>17</release.version>
 		<wagon.scm.version>3.5.2</wagon.scm.version>
 		<wagon.scm.provider.version>1.13.0</wagon.scm.provider.version>
 		<pushChanges>false</pushChanges>
